# TikTokGames

./: README.md
TikTokArena/: CMakeLists.txt  build.sh
TikTokArena/inc/: TikTokArena.hpp
TikTokArena/inc/core/: Game.hpp  GameConfig.hpp
TikTokArena/inc/duel/: Duel.hpp  DuelManager.hpp
TikTokArena/inc/effects/: BackgroundParticles.hpp
TikTokArena/inc/entities/: BasicPowerUp.hpp  BasicWeapon.hpp  BatWeapon.hpp  GunWeapon.hpp  LaserWeapon.hpp  Player.hpp  PowerUp.hpp  RotatingWeapon.hpp  Weapon.hpp
TikTokArena/inc/gameplay/: WeaponSelection.hpp
TikTokArena/inc/graphics/: WindowManager.hpp
TikTokArena/inc/physics/: CircleCollisionResolver.hpp  MotionIntegrator.hpp  PhysicsConfig.hpp  PhysicsSystem.hpp  WallCollisionResolver.hpp
TikTokArena/inc/test/: TestPlayerFactory.hpp
TikTokArena/inc/ui/: ArenaGrid.hpp  HealthBarRenderer.hpp  WaitingPlayersRenderer.hpp
TikTokArena/src/: main.cpp
TikTokArena/src/core/: Game.cpp  GameConfig.cpp
TikTokArena/src/duel/: Duel.cpp  DuelManager.cpp
TikTokArena/src/effects/: BackgroundParticles.cpp
TikTokArena/src/entities/: BasicPowerUp.cpp  BasicWeapon.cpp  BatWeapon.cpp  GunWeapon.cpp  LaserWeapon.cpp  Player.cpp  PowerUp.cpp  RotatingWeapon.cpp  Weapon.cpp
TikTokArena/src/gameplay/: WeaponSelection.cpp
TikTokArena/src/graphics/: WindowManager.cpp
TikTokArena/src/physics/: CircleCollisionResolver.cpp  MotionIntegrator.cpp  PhysicsSystem.cpp  WallCollisionResolver.cpp
TikTokArena/src/test/: TestPlayerFactory.cpp
TikTokArena/src/ui/: ArenaGrid.cpp  HealthBarRenderer.cpp  WaitingPlayersRenderer.cpp
tiktoklistener/: README.md  pyproject.toml  setup.py
tiktoklistener/config/: example.yaml  game_bridge_stdout.yaml  game_bridge_udp.yaml  logging.yaml  mock.yaml  tiktoklive-full-logs.yaml  tiktoklive.yaml  websocket.yaml
tiktoklistener/demo_client/: __init__.py  websocket_printer.py
tiktoklistener/docs/: DEVELOPMENT.md  EVENT_FORMAT.md  GAME_BRIDGE.md  ROADMAP.md  TIKTOKLIVE_CONNECTOR.md  WEBSOCKET_PROTOCOL.md
tiktoklistener/examples/: __init__.py
tiktoklistener/examples/clients/: README.md  __init__.py  generic_game_adapter.py  gift_subscriber.py  terminal_dashboard.py  websocket_printer.py
tiktoklistener/examples/events/: comment.json  connect.json  disconnect.json  error.json  follow.json  gift.json  heartbeat.json  join.json  like.json
tiktoklistener/examples/game_bridge/: config.yaml  rules.xml  rules_compact.xml  templates.json  templates_compact.json
tiktoklistener/scripts/: listen_live.py
tiktoklistener/src/tiktok_event_gateway/: __init__.py  app.py  cli.py  runtime.py
tiktoklistener/src/tiktok_event_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tiktoklistener/src/tiktok_event_gateway/bridge/: __init__.py  deduplication.py  game_bridge.py  models.py  output_transport.py  rule_engine.py  rule_loader.py  template_loader.py  template_renderer.py  utils.py
tiktoklistener/src/tiktok_event_gateway/broker/: __init__.py  event_broker.py
tiktoklistener/src/tiktok_event_gateway/config/: __init__.py  loader.py  settings.py
tiktoklistener/src/tiktok_event_gateway/connectors/: __init__.py  base.py  mock.py  tiktok_live.py
tiktoklistener/src/tiktok_event_gateway/logging/: __init__.py  event_log.py  setup.py
tiktoklistener/src/tiktok_event_gateway/models/: __init__.py  enums.py  events.py
tiktoklistener/src/tiktok_event_gateway/normalization/: __init__.py  normalizer.py
tiktoklistener/src/tiktok_event_gateway/transports/: __init__.py  subscriptions.py  websocket_server.py
tiktoklistener/src/tiktok_event_gateway/utils/: __init__.py  tiktok.py
tiktoklistener/templates/: output.json  rules.xml
tiktoklistener/tests/integration/: __init__.py  test_gateway_pipeline.py
tiktoklistener/tests/unit/: __init__.py  test_config.py  test_connectors.py  test_event_log.py  test_game_bridge.py  test_models.py  test_normalizer.py  test_replay.py  test_subscriptions.py  test_tiktok_live_connector.py  test_tiktok_utils.py
tiktokwar/: CMakeLists.txt  README.md  build.sh  build_windows.bat  clean.sh  gifts.xml  tiktoklistener.py  video.py
tiktokwar/build_check/: CMakeCache.txt
tiktokwar/build_test/: CMakeCache.txt
tiktokwar/include/audio/: AudioManager.hpp
tiktokwar/include/core/: Config.hpp  Constants.hpp  Game.hpp  GameCommand.hpp  Types.hpp  WindowContext.hpp
tiktokwar/include/input/: InputManager.hpp  KeyboardAdapter.hpp  TikTokAdapter.hpp
tiktokwar/include/model/: GameEvent.hpp  GameState.hpp  NormalUnit.hpp  ShieldedUnit.hpp  SpikedUnit.hpp  Tower.hpp  Unit.hpp
tiktokwar/include/render/: CannonGeometry.hpp  EffectsRenderer.hpp  HudRenderer.hpp  Renderer.hpp  TowerRenderer.hpp  UnitRenderer.hpp  ViewportScaler.hpp
tiktokwar/include/systems/: CollisionSystem.hpp  CombatSystem.hpp  MovementSystem.hpp  RoundSystem.hpp  SpawnSystem.hpp
tiktokwar/include/utils/: IdGenerator.hpp  Math.hpp
tiktokwar/output_config/: output.json  rules.xml
tiktokwar/src/: main.cpp
tiktokwar/src/audio/: AudioManager.cpp
tiktokwar/src/core/: Game.cpp
tiktokwar/src/input/: InputManager.cpp  KeyboardAdapter.cpp  TikTokAdapter.cpp
tiktokwar/src/model/: GameEvent.cpp  GameState.cpp  NormalUnit.cpp  ShieldedUnit.cpp  SpikedUnit.cpp  Tower.cpp  Unit.cpp
tiktokwar/src/render/: EffectsRenderer.cpp  HudRenderer.cpp  Renderer.cpp  TowerRenderer.cpp  UnitRenderer.cpp
tiktokwar/src/systems/: CollisionSystem.cpp  CombatSystem.cpp  MovementSystem.cpp  RoundSystem.cpp  SpawnSystem.cpp
tiktokwar/src/utils/: IdGenerator.cpp  Math.cpp
tiktokwar/tools/: send_game_event.py  send_random_game_events.sh
